add wilds utils required to run mnli and civil

--- a/notebooks/civil.ipynb
+++ b/notebooks/civil.ipynb
@@ -309,7 +309,7 @@
     "    \n",
     "    # 3 horizontal subplots\n",
     "    fig, arr = plt.subplots(1, 3, figsize=(20, 5))\n",
-    "    arr[0].plot(metrics.losses, label=\"CWXE\")\n",
+    "    arr[0].plot(metrics.losses, label=\"wxe\")\n",
     "    arr[0].plot(metrics.regs, label=\"Reg\")\n",
     "    arr[0].grid()\n",
     "    arr[0].legend(loc=\"lower right\")\n",
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cwxe(*_):\n",
+    "def get_wxe(*_):\n",
     "    def confidence_wxe_fn(logits, y, weights):\n",
     "        ce = torch.nn.functional.cross_entropy(logits, y, reduction='none')\n",
     "        focal = weights * ce\n",
@@ -576,7 +576,7 @@
     "    last_layer_model.bias.data = b0.clone()\n",
     "    last_layer_model.cuda()\n",
     "\n",
-    "    criterion = get_cwxe(gamma)\n",
+    "    criterion = get_wxe(gamma)\n",
     "    optimizer = torch.optim.SGD(last_layer_model.parameters(), lr=lr, weight_decay=0., momentum=0.)\n",
     "\n",
     "    metrics = Metrics(reweighting_metadata, test_metadata, val_metadata)\n",
