fixed torch version

--- a/notebooks/wb_celeba.ipynb
+++ b/notebooks/wb_celeba.ipynb
@@ -507,7 +507,7 @@
    "outputs": [],
    "source": [
     "load_emb = True\n",
-    "skip_if_done = False\n",
+    "skip_if_done = True\n",
     "num_augs = 1\n",
     "val_prop = 1\n",
     "\n",
