--- a/notebooks/civil.ipynb
+++ b/notebooks/civil.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: OMP_NUM_THREADS=4\n",
+      "env: CUDA_VISIBLE_DEVICES=0\n"
+     ]
+    }
+   ],
    "source": [
     "%env OMP_NUM_THREADS=4\n",
     "%env CUDA_VISIBLE_DEVICES=0\n",
@@ -14,9 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "### TODO: Modify to your own data dir ###\n",
+    "data_dir = '/data/users/pavel_i/datasets/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shikai_q/anaconda3/envs/afr/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"../wilds_exps_utils/\")\n",
@@ -39,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +129,7 @@
     "DATASET = 'civilcomments'\n",
     "seed = 2\n",
     "args = SimpleNamespace(\n",
-    "    root_dir='/data/users/pavel_i/datasets/',\n",
+    "    root_dir=data_dir,\n",
     "    batch_size=16,\n",
     "    dfr_reweighting_drop=True,\n",
     "    dfr_reweighting_seed=seed,\n",
@@ -125,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,9 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Found 0 ckpts for seed 0, expected 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m seed \u001b[39min\u001b[39;00m seeds:\n\u001b[1;32m      5\u001b[0m     ckpt_path \u001b[39m=\u001b[39m glob(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mckpt_dir\u001b[39m}\u001b[39;00m\u001b[39m/bert_civilcomments_dfrdrop_\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m/*last_model.pth\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mlen\u001b[39m(ckpt_path) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFound \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(ckpt_path)\u001b[39m}\u001b[39;00m\u001b[39m ckpts for seed \u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m, expected 1\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      7\u001b[0m     ckpt_path \u001b[39m=\u001b[39m ckpt_path[\u001b[39m0\u001b[39m]\n\u001b[1;32m      8\u001b[0m     save_path \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39memb/civil/\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m.pt\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Found 0 ckpts for seed 0, expected 1"
+     ]
+    }
+   ],
    "source": [
     "from glob import glob\n",
     "ckpt_dir = '/data/users/pavel_i/wilds_ckpts'\n",
@@ -241,15 +281,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MethodName"
+    "## AFR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +301,7 @@
     "    # print(f\"Early stopping test mean acc: {metrics.test_accs['mean_acc'][earlystop_epoch]:.3f} at epoch {earlystop_epoch}\")\n",
     "    print()\n",
     "    \n",
-    "    print(\"Early stopping by Val Black\")\n",
+    "    print(\"Early stopping by Val\")\n",
     "    earlystop_epoch = np.argmax(metrics.val_accs[\"combined_wga\"])\n",
     "    print(f\"test WGA: {metrics.test_accs['wga'][earlystop_epoch]:.3f} at epoch {earlystop_epoch}\") \n",
     "    # print(f\"Early stopping test mean acc: {metrics.test_accs['mean_acc'][earlystop_epoch]:.3f} at epoch {earlystop_epoch}\")\n",
@@ -350,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,9 +687,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reweighting size: 53808\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Val cwga: 0.000, TWGA: 0.421: 100%|██████████| 50/50 [00:08<00:00,  5.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seed 0, gamma 0.0, reg 0, lr 0.01: 0\n",
+      "Reweighting size: 53808\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Val cwga: 0.000, TWGA: 0.420: 100%|██████████| 50/50 [00:08<00:00,  5.69it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seed 0, gamma 0.001, reg 0, lr 0.01: 0\n",
+      "Reweighting size: 53808\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Val cwga: 0.000, TWGA: 0.419: 100%|██████████| 50/50 [00:07<00:00,  6.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seed 0, gamma 0.01, reg 0, lr 0.01: 0\n",
+      "Reweighting size: 53808\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Val cwga: 0.000, TWGA: 0.399: 100%|██████████| 50/50 [00:05<00:00,  8.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seed 0, gamma 0.1, reg 0, lr 0.01: 0\n",
+      "Reweighting size: 53808\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Val cwga: 0.000, TWGA: 0.558:  46%|████▌     | 23/50 [00:02<00:03,  8.19it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m reg_coef \u001b[39min\u001b[39;00m reg_coefs:\n\u001b[1;32m     21\u001b[0m     \u001b[39mfor\u001b[39;00m lr \u001b[39min\u001b[39;00m lrs:\n\u001b[0;32m---> 22\u001b[0m         metrics, weights, val_wga \u001b[39m=\u001b[39m train(\n\u001b[1;32m     23\u001b[0m                 reweighting_data, test_data, val_data,\n\u001b[1;32m     24\u001b[0m                 emb_dict, num_epochs\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m, gamma\u001b[39m=\u001b[39;49mgamma, reg_coeff\u001b[39m=\u001b[39;49mreg_coef, lr\u001b[39m=\u001b[39;49mlr,\n\u001b[1;32m     25\u001b[0m                 balance_classes\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, plot\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, silent\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, combine_reweighting\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[1;32m     26\u001b[0m         all_results[(val_prop, shuffle_seed, seed, gamma, reg_coef, lr)] \u001b[39m=\u001b[39m val_wga\n\u001b[1;32m     27\u001b[0m         all_metrics[(val_prop, shuffle_seed, seed, gamma, reg_coef, lr)] \u001b[39m=\u001b[39m metrics\n",
+      "Cell \u001b[0;32mIn[17], line 64\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m     61\u001b[0m     val_predictions \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(last_layer_model(val_embeddings), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     62\u001b[0m     reweighting_results \u001b[39m=\u001b[39m reweighting_data\u001b[39m.\u001b[39meval(\n\u001b[1;32m     63\u001b[0m             reweighting_predictions\u001b[39m.\u001b[39mcpu(), reweighting_y\u001b[39m.\u001b[39mcpu(), reweighting_metadata\u001b[39m.\u001b[39mcpu())\n\u001b[0;32m---> 64\u001b[0m     test_results \u001b[39m=\u001b[39m test_data\u001b[39m.\u001b[39;49meval(test_predictions\u001b[39m.\u001b[39;49mcpu(), test_y\u001b[39m.\u001b[39;49mcpu(), test_metadata\u001b[39m.\u001b[39;49mcpu())\n\u001b[1;32m     65\u001b[0m     val_results \u001b[39m=\u001b[39m val_data\u001b[39m.\u001b[39meval(val_predictions\u001b[39m.\u001b[39mcpu(), val_y\u001b[39m.\u001b[39mcpu(), val_metadata\u001b[39m.\u001b[39mcpu())\n\u001b[1;32m     67\u001b[0m metrics\u001b[39m.\u001b[39mupdate(\n\u001b[1;32m     68\u001b[0m     weights, ce, p_true, loss, reg,\n\u001b[1;32m     69\u001b[0m     reweighting_results, reweighting_predictions,\n\u001b[1;32m     70\u001b[0m     test_results, test_predictions, \n\u001b[1;32m     71\u001b[0m     val_results, val_predictions\n\u001b[1;32m     72\u001b[0m )\n",
+      "File \u001b[0;32m~/anaconda3/envs/afr/lib/python3.9/site-packages/wilds/datasets/wilds_dataset.py:522\u001b[0m, in \u001b[0;36mWILDSSubset.eval\u001b[0;34m(self, y_pred, y_true, metadata)\u001b[0m\n\u001b[1;32m    521\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39meval\u001b[39m(\u001b[39mself\u001b[39m, y_pred, y_true, metadata):\n\u001b[0;32m--> 522\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset\u001b[39m.\u001b[39;49meval(y_pred, y_true, metadata)\n",
+      "File \u001b[0;32m~/anaconda3/envs/afr/lib/python3.9/site-packages/wilds/datasets/civilcomments_dataset.py:164\u001b[0m, in \u001b[0;36mCivilCommentsDataset.eval\u001b[0;34m(self, y_pred, y_true, metadata, prediction_fn)\u001b[0m\n\u001b[1;32m    162\u001b[0m worst_group_metric \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    163\u001b[0m \u001b[39mfor\u001b[39;00m identity_var, eval_grouper \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_identity_vars, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_eval_groupers):\n\u001b[0;32m--> 164\u001b[0m     g \u001b[39m=\u001b[39m eval_grouper\u001b[39m.\u001b[39;49mmetadata_to_group(metadata)\n\u001b[1;32m    165\u001b[0m     group_results \u001b[39m=\u001b[39m {\n\u001b[1;32m    166\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mmetric\u001b[39m.\u001b[39mcompute_group_wise(y_pred, y_true, g, eval_grouper\u001b[39m.\u001b[39mn_groups)\n\u001b[1;32m    167\u001b[0m     }\n\u001b[1;32m    168\u001b[0m     results_str \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m  \u001b[39m\u001b[39m{\u001b[39;00midentity_var\u001b[39m:\u001b[39;00m\u001b[39m20s\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/envs/afr/lib/python3.9/site-packages/wilds/common/grouper.py:153\u001b[0m, in \u001b[0;36mCombinatorialGrouper.metadata_to_group\u001b[0;34m(self, metadata, return_counts)\u001b[0m\n\u001b[1;32m    151\u001b[0m     groups \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros(metadata\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mlong)\n\u001b[1;32m    152\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 153\u001b[0m     groups \u001b[39m=\u001b[39m metadata[:, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgroupby_field_indices]\u001b[39m.\u001b[39mlong() \u001b[39m@\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfactors\n\u001b[1;32m    155\u001b[0m \u001b[39mif\u001b[39;00m return_counts:\n\u001b[1;32m    156\u001b[0m     group_counts \u001b[39m=\u001b[39m get_counts(groups, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_n_groups)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "gammas = [0., 0.001, 0.01, 0.1, 1., 10., 100.]\n",
     "reg_coefs = [0]\n",
