--- a/notebooks/wb_celeba.ipynb
+++ b/notebooks/wb_celeba.ipynb
@@ -16,6 +16,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### TODO: Modify these to your own paths ###\n",
+    "wb_data_path = '/datasets/waterbirds_official'\n",
+    "celeba_data_path = '/datasets/CelebA'\n",
+    "\n",
+    "CKPTDIR = '/home/shikai_q/spurious_old/checkpoints'\n",
+    "\n",
+    "WB_CKPTS = [\n",
+    "    f\"{CKPTDIR}/wb/80_1/final_checkpoint.pt\", \n",
+    "    f\"{CKPTDIR}/wb/80_21/20230115_131136_mVno/final_checkpoint.pt\",\n",
+    "    f\"{CKPTDIR}/wb/80_98/20230115_131150_CThg/final_checkpoint.pt\"\n",
+    "]\n",
+    "CelebA_CKPTS = [\n",
+    "    f\"{CKPTDIR}/celeba/80_1/20230106_144116_tpaT/final_checkpoint.pt\", \n",
+    "    f\"{CKPTDIR}/celeba/80_21/20230106_144132_glNH/final_checkpoint.pt\",\n",
+    "    f\"{CKPTDIR}/celeba/80_98/20230106_144147_AVRm/final_checkpoint.pt\"\n",
+    "    ]\n",
+    "### The remaining code needs zero modification ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "from types import SimpleNamespace\n",
     "\n",
@@ -33,31 +58,6 @@
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### TODO: Modify these to your own paths ###\n",
-    "wb_data_path = '/datasets/waterbirds_official'\n",
-    "celeba_data_path = '/datasets/CelebA'\n",
-    "\n",
-    "CKPTDIR = '/home/shikai_q/spurious_old/checkpoints'\n",
-    "\n",
-    "WB_CKPTS = [\n",
-    "    f\"{CKPTDIR}/wb/80_1/final_checkpoint.pt\", \n",
-    "    f\"{CKPTDIR}/wb/80_21/20230115_131136_mVno/final_checkpoint.pt\",\n",
-    "    f\"{CKPTDIR}/wb/80_98/20230115_131150_CThg/final_checkpoint.pt\"\n",
-    "]\n",
-    "CelebA_CKPTS = [\n",
-    "    f\"{CKPTDIR}/celeba/80_1/20230106_144116_tpaT/final_checkpoint.pt\", \n",
-    "    f\"{CKPTDIR}/celeba/80_21/20230106_144132_glNH/final_checkpoint.pt\",\n",
-    "    f\"{CKPTDIR}/celeba/80_98/20230106_144147_AVRm/final_checkpoint.pt\"\n",
-    "    ]\n",
-    "# The remaining code needs zero modification"
    ]
   },
   {
