--- a/notebooks/civil.ipynb
+++ b/notebooks/civil.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: OMP_NUM_THREADS=4\n",
-      "env: CUDA_VISIBLE_DEVICES=0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%env OMP_NUM_THREADS=4\n",
     "%env CUDA_VISIBLE_DEVICES=0\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/shikai_q/anaconda3/envs/afr/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../wilds_exps_utils/\")\n",
@@ -67,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +116,6 @@
     "    dfr_reweighting_drop=True,\n",
     "    dfr_reweighting_seed=seed,\n",
     "    dfr_reweighting_frac=0.2,\n",
-    "    ckpt_path=f'/home/pavel_i/projects/ssl_robustness/wilds_exps/logs/bert_civilcomments_dfrdrop_{seed}/civilcomments_seed:{seed}_epoch:last_model.pth'\n",
     ")\n",
     "wilds_config = SimpleNamespace(\n",
     "    algorithm='ERM',\n",
@@ -153,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,13 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_embeddings_predictions(feature_extractor, classifier, loader):\n",
     "    all_embeddings, all_predictions, all_y_true, all_metadata = [], [], [], []\n",
-    "    # i = 0\n",
     "    with torch.no_grad():\n",
     "        for x, y_true, metadata in tqdm.tqdm(loader):\n",
     "            embeddings = feature_extractor(x.cuda())\n",
@@ -201,13 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_emb(ckpt_path, seed, save_path):\n",
     "        args = SimpleNamespace(\n",
-    "        root_dir='/data/users/pavel_i/datasets/',\n",
+    "        root_dir=data_dir,\n",
     "        batch_size=16,\n",
     "        dfr_reweighting_drop=True,\n",
     "        dfr_reweighting_seed=seed,\n",
@@ -224,7 +204,7 @@
     "        wilds_config.model = 'bert-base-uncased'\n",
     "\n",
     "        val_data, test_data, reweighting_data = get_data(args, wilds_config)\n",
-    "        bad_test_idx = 73529\n",
+    "        bad_test_idx = 73529 # this example is somehow broken ...\n",
     "        test_data.indices = np.delete(test_data.indices, bad_test_idx)\n",
     "        reweighting_loader = get_eval_loader(\"standard\", reweighting_data, batch_size=args.batch_size)\n",
     "        val_loader = get_eval_loader(\"standard\", val_data, batch_size=args.batch_size)\n",
@@ -253,30 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Found 0 ckpts for seed 0, expected 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m seed \u001b[39min\u001b[39;00m seeds:\n\u001b[1;32m      5\u001b[0m     ckpt_path \u001b[39m=\u001b[39m glob(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mckpt_dir\u001b[39m}\u001b[39;00m\u001b[39m/bert_civilcomments_dfrdrop_\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m/*last_model.pth\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mlen\u001b[39m(ckpt_path) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFound \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(ckpt_path)\u001b[39m}\u001b[39;00m\u001b[39m ckpts for seed \u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m, expected 1\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      7\u001b[0m     ckpt_path \u001b[39m=\u001b[39m ckpt_path[\u001b[39m0\u001b[39m]\n\u001b[1;32m      8\u001b[0m     save_path \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39memb/civil/\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m.pt\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Found 0 ckpts for seed 0, expected 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from glob import glob\n",
-    "ckpt_dir = '/data/users/pavel_i/wilds_ckpts'\n",
-    "seeds = [0, 1, 2, 3, 4, 5]\n",
+    "import os\n",
+    "ckpt_dir = '/data/users/pavel_i/wilds_ckpts' # TODO: change to your ckpt dir\n",
+    "seeds = [0, 1, 2] # TODO: change to your seeds for splitting the train data\n",
+    "save_dir = '../emb/civil'\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
     "for seed in seeds:\n",
-    "    ckpt_path = glob(f'{ckpt_dir}/bert_civilcomments_dfrdrop_{seed}/*last_model.pth')\n",
+    "    ckpt_path = glob(f'{ckpt_dir}/bert_civilcomments_dfrdrop_{seed}/*last_model.pth') # TODO: change to your ckpt path\n",
     "    assert len(ckpt_path) == 1, f'Found {len(ckpt_path)} ckpts for seed {seed}, expected 1'\n",
     "    ckpt_path = ckpt_path[0]\n",
-    "    save_path = f'emb/civil/{seed}.pt'\n",
+    "    save_path = f'{save_dir}/{seed}.pt'\n",
     "    save_emb(ckpt_path, seed, save_path)"
    ]
   },
@@ -290,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +540,6 @@
     "    # Early stopping\n",
     "    best_weights = {'w': w0, 'b': b0}\n",
     "    best_wga = 0\n",
-    "#     trian_group_ratios = emb_dict['trian_group_ratios']\n",
     "\n",
     "    last_layer_model = torch.nn.Linear(w0.shape[1], w0.shape[0], bias=True)\n",
     "    last_layer_model.weight.data = w0.clone()\n",
@@ -634,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,112 +657,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reweighting size: 53808\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Val cwga: 0.000, TWGA: 0.421: 100%|██████████| 50/50 [00:08<00:00,  5.70it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "seed 0, gamma 0.0, reg 0, lr 0.01: 0\n",
-      "Reweighting size: 53808\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Val cwga: 0.000, TWGA: 0.420: 100%|██████████| 50/50 [00:08<00:00,  5.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "seed 0, gamma 0.001, reg 0, lr 0.01: 0\n",
-      "Reweighting size: 53808\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Val cwga: 0.000, TWGA: 0.419: 100%|██████████| 50/50 [00:07<00:00,  6.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "seed 0, gamma 0.01, reg 0, lr 0.01: 0\n",
-      "Reweighting size: 53808\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Val cwga: 0.000, TWGA: 0.399: 100%|██████████| 50/50 [00:05<00:00,  8.47it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "seed 0, gamma 0.1, reg 0, lr 0.01: 0\n",
-      "Reweighting size: 53808\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Val cwga: 0.000, TWGA: 0.558:  46%|████▌     | 23/50 [00:02<00:03,  8.19it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m reg_coef \u001b[39min\u001b[39;00m reg_coefs:\n\u001b[1;32m     21\u001b[0m     \u001b[39mfor\u001b[39;00m lr \u001b[39min\u001b[39;00m lrs:\n\u001b[0;32m---> 22\u001b[0m         metrics, weights, val_wga \u001b[39m=\u001b[39m train(\n\u001b[1;32m     23\u001b[0m                 reweighting_data, test_data, val_data,\n\u001b[1;32m     24\u001b[0m                 emb_dict, num_epochs\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m, gamma\u001b[39m=\u001b[39;49mgamma, reg_coeff\u001b[39m=\u001b[39;49mreg_coef, lr\u001b[39m=\u001b[39;49mlr,\n\u001b[1;32m     25\u001b[0m                 balance_classes\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, plot\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, silent\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, combine_reweighting\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[1;32m     26\u001b[0m         all_results[(val_prop, shuffle_seed, seed, gamma, reg_coef, lr)] \u001b[39m=\u001b[39m val_wga\n\u001b[1;32m     27\u001b[0m         all_metrics[(val_prop, shuffle_seed, seed, gamma, reg_coef, lr)] \u001b[39m=\u001b[39m metrics\n",
-      "Cell \u001b[0;32mIn[17], line 64\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m     61\u001b[0m     val_predictions \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(last_layer_model(val_embeddings), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     62\u001b[0m     reweighting_results \u001b[39m=\u001b[39m reweighting_data\u001b[39m.\u001b[39meval(\n\u001b[1;32m     63\u001b[0m             reweighting_predictions\u001b[39m.\u001b[39mcpu(), reweighting_y\u001b[39m.\u001b[39mcpu(), reweighting_metadata\u001b[39m.\u001b[39mcpu())\n\u001b[0;32m---> 64\u001b[0m     test_results \u001b[39m=\u001b[39m test_data\u001b[39m.\u001b[39;49meval(test_predictions\u001b[39m.\u001b[39;49mcpu(), test_y\u001b[39m.\u001b[39;49mcpu(), test_metadata\u001b[39m.\u001b[39;49mcpu())\n\u001b[1;32m     65\u001b[0m     val_results \u001b[39m=\u001b[39m val_data\u001b[39m.\u001b[39meval(val_predictions\u001b[39m.\u001b[39mcpu(), val_y\u001b[39m.\u001b[39mcpu(), val_metadata\u001b[39m.\u001b[39mcpu())\n\u001b[1;32m     67\u001b[0m metrics\u001b[39m.\u001b[39mupdate(\n\u001b[1;32m     68\u001b[0m     weights, ce, p_true, loss, reg,\n\u001b[1;32m     69\u001b[0m     reweighting_results, reweighting_predictions,\n\u001b[1;32m     70\u001b[0m     test_results, test_predictions, \n\u001b[1;32m     71\u001b[0m     val_results, val_predictions\n\u001b[1;32m     72\u001b[0m )\n",
-      "File \u001b[0;32m~/anaconda3/envs/afr/lib/python3.9/site-packages/wilds/datasets/wilds_dataset.py:522\u001b[0m, in \u001b[0;36mWILDSSubset.eval\u001b[0;34m(self, y_pred, y_true, metadata)\u001b[0m\n\u001b[1;32m    521\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39meval\u001b[39m(\u001b[39mself\u001b[39m, y_pred, y_true, metadata):\n\u001b[0;32m--> 522\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset\u001b[39m.\u001b[39;49meval(y_pred, y_true, metadata)\n",
-      "File \u001b[0;32m~/anaconda3/envs/afr/lib/python3.9/site-packages/wilds/datasets/civilcomments_dataset.py:164\u001b[0m, in \u001b[0;36mCivilCommentsDataset.eval\u001b[0;34m(self, y_pred, y_true, metadata, prediction_fn)\u001b[0m\n\u001b[1;32m    162\u001b[0m worst_group_metric \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    163\u001b[0m \u001b[39mfor\u001b[39;00m identity_var, eval_grouper \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_identity_vars, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_eval_groupers):\n\u001b[0;32m--> 164\u001b[0m     g \u001b[39m=\u001b[39m eval_grouper\u001b[39m.\u001b[39;49mmetadata_to_group(metadata)\n\u001b[1;32m    165\u001b[0m     group_results \u001b[39m=\u001b[39m {\n\u001b[1;32m    166\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mmetric\u001b[39m.\u001b[39mcompute_group_wise(y_pred, y_true, g, eval_grouper\u001b[39m.\u001b[39mn_groups)\n\u001b[1;32m    167\u001b[0m     }\n\u001b[1;32m    168\u001b[0m     results_str \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m  \u001b[39m\u001b[39m{\u001b[39;00midentity_var\u001b[39m:\u001b[39;00m\u001b[39m20s\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "File \u001b[0;32m~/anaconda3/envs/afr/lib/python3.9/site-packages/wilds/common/grouper.py:153\u001b[0m, in \u001b[0;36mCombinatorialGrouper.metadata_to_group\u001b[0;34m(self, metadata, return_counts)\u001b[0m\n\u001b[1;32m    151\u001b[0m     groups \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros(metadata\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mlong)\n\u001b[1;32m    152\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 153\u001b[0m     groups \u001b[39m=\u001b[39m metadata[:, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgroupby_field_indices]\u001b[39m.\u001b[39mlong() \u001b[39m@\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfactors\n\u001b[1;32m    155\u001b[0m \u001b[39mif\u001b[39;00m return_counts:\n\u001b[1;32m    156\u001b[0m     group_counts \u001b[39m=\u001b[39m get_counts(groups, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_n_groups)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gammas = [0., 0.001, 0.01, 0.1, 1., 10., 100.]\n",
     "reg_coefs = [0]\n",
     "lrs = [1e-2]\n",
+    "vps = [1.] # validation proportion: change / add more if you want to subsample the validation set\n",
     "\n",
     "all_results = {}\n",
     "all_metrics = {}\n",
     "\n",
-    "for val_prop in [0.005]: #[0.01, 0.02, 0.05, 0.1, 0.2, 0.5, 1]:\n",
+    "for val_prop in vps:\n",
     "    for seed in seeds:\n",
     "        for shuffle_seed in [0, 21, 42]:\n",
     "            rng = np.random.default_rng(shuffle_seed)\n",
-    "            emb_dict = torch.load(f\"../emb/civil/{seed}.pt\")\n",
+    "            emb_dict = torch.load(f\"{save_dir}/{seed}.pt\")\n",
     "            idx = np.arange(len(emb_dict['val_y']))\n",
     "            rng.shuffle(idx)\n",
     "            idx = idx[:int(val_prop * len(idx))]\n",
@@ -819,13 +700,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# select best hyperparameters\n",
     "all_metrics = torch.load(\"all_metrics.pt\")\n",
-    "seeds = [0,1,2,3,4]\n",
-    "vps = [0.005, 0.01, 0.02, 0.05, 0.1, 0.2, 0.5, 1]\n",
+    "seeds = [0,1,2]\n",
     "test_wgas = []\n",
     "for val_prop in vps:\n",
     "    twgas = []\n",
-    "    for seed in seeds[:5]:\n",
+    "    for seed in seeds:\n",
     "        seed_metrics = {k: v for (k, v) in all_metrics.items() if k[0] == val_prop and k[2] == seed}\n",
     "        max_key = max(seed_metrics, key=lambda k: vcwga(seed_metrics[k]))\n",
     "        twgas.append(twga(all_metrics[max_key]))\n",
@@ -836,58 +717,9 @@
     "std_wgas = [np.std(twgas) for twgas in test_wgas]\n",
     "mean_wgas = np.array(mean_wgas) * 100\n",
     "std_wgas = np.array(std_wgas) * 100\n",
-    "vps = np.array(vps)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "from glob import glob\n",
-    "import os\n",
+    "vps = np.array(vps)\n",
     "\n",
-    "dfr_vps = []\n",
-    "dfr_wgas = []\n",
-    "for file in glob('/home/shikai_q/deep_feature_reweighting/results/dfr_civil*.pkl'):\n",
-    "    with open(file, 'rb') as f:\n",
-    "        dfr = pickle.load(f)\n",
-    "    dfr_vps = dfr['val_fracs']\n",
-    "    dfr_wgas.append(dfr['test_wgas']) # (vp, seed)\n",
-    "dfr_vps = np.array(dfr_vps)\n",
-    "dfr_wgas = np.array(dfr_wgas) # (ckpt, vp, seed)\n",
-    "dfr_mean_wgas = np.mean(dfr_wgas, axis=(0, 2)) * 100 # (vp, )\n",
-    "dfr_std_wgas = np.std(dfr_wgas, axis=(0, 2)) * 100 # (vp, )\n",
-    "\n",
-    "# plot mean and std against val_props\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
-    "sns.set(style=\"whitegrid\", font_scale=2.0, rc={\"lines.linewidth\": 3.0})\n",
-    "sns.set_palette(\"Set1\")\n",
-    "\n",
-    "plt.figure(dpi=100, figsize=(8, 6))\n",
-    "erm = 57.4\n",
-    "plt.plot([0, 1], [erm, erm], '--', label='ERM', color='black')\n",
-    "\n",
-    "# plot nice-looking error bars as shaded region\n",
-    "plt.fill_between(vps, mean_wgas - std_wgas, mean_wgas + std_wgas, alpha=0.2)\n",
-    "plt.plot(vps, mean_wgas, label='AFR', marker='o', markersize=10)\n",
-    "\n",
-    "plt.plot(dfr_vps[dfr_vps >= vps.min()], dfr_mean_wgas[dfr_vps >= vps.min()], label='DFR', marker='o', markersize=10)\n",
-    "plt.fill_between(dfr_vps[dfr_vps >= vps.min()], dfr_mean_wgas[dfr_vps >= vps.min()] - dfr_std_wgas[dfr_vps >= vps.min()], dfr_mean_wgas[dfr_vps >= vps.min()] + dfr_std_wgas[dfr_vps >= vps.min()], alpha=0.2)\n",
-    "plt.xlabel('Fraction of group labels')\n",
-    "# log x axis but label in linear\n",
-    "plt.xscale('log')\n",
-    "ticks = vps\n",
-    "plt.xticks(ticks, ticks, fontsize=20)\n",
-    "\n",
-    "plt.ylabel('Test WGA [%]')\n",
-    "plt.legend(loc='lower right', fontsize=20)\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('plots/civil_dfr_eff.pdf')\n",
-    "\n"
+    "print(mean_wgas)"
    ]
   }
  ],
