--- a/notebooks/multinli.ipynb
+++ b/notebooks/multinli.ipynb
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_dir = '/home/shikai_q/multinli_ckpts/multinli' # TODO: change to your directory of checkpoints\n",
+    "ckpt_dir = '/home/andres_p/gdro_fork/logs/multinli' # TODO: change to your directory of checkpoints\n",
     "ckpts = ['erm_dfrdrop0', 'erm_dfrdrop_1', 'erm_dfrdrop2'] # TODO: change to your checkpoints\n",
     "seeds = [0, 1, 2] # TODO: change to your seeds for splitting the train data\n",
     "for ckpt, seed in zip(ckpts, seeds):\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,14 +342,7 @@
     "            for y in range(1, n_classes):\n",
     "                weights[class_label == y] *= class_count[0] / class_count[y]\n",
     "        weights /= weights.sum()\n",
-    "    return weights\n",
-    "\n",
-    "def argmax_last(x):\n",
-    "    # x: (n,)\n",
-    "    # take argmax, if there are multiple, take the last one\n",
-    "    x = torch.as_tensor(x)\n",
-    "    max_idx = (x == x.max()).nonzero().squeeze(-1)\n",
-    "    return max_idx[-1]"
+    "    return weights"
    ]
   },
   {
@@ -653,14 +646,6 @@
     "    # print mean and std of mean acc\n",
     "    print(f\"Mean best mean acc: {np.mean(best_tmaccs):.3f}, std: {np.std(best_tmaccs):.3f}\")\n",
     "    return np.mean(best_twgas), np.std(best_twgas), np.mean(best_tmaccs), np.std(best_tmaccs)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Nominal"
    ]
   },
   {
